--- a/portfoilo/PortfolioMain.html
+++ b/portfoilo/PortfolioMain.html
@@ -19,7 +19,7 @@
 <div id="main">
   <nav class="col-3 menu"> <!-- 메뉴 -->
     <ul><li><a href="https://n.html">Main</a></li>
-          <li><a href="https:/FOLIO/PortfolioSchedule.html">시간표</a></li>
+          <li><a href="https://leedongjin0903.github.io/3/3-3-6H%20subjectTable1.html">시간표</a></li>
           <li><a href="https:OLIO/PortfolioContest.html">공모전</a></li>
           <li><a href="https:/O/PortfolioService.html">봉사활동</a></li>
           <li><a href="https:/RTFOLIO/PortfolioWorkingHoliday.html">WorkingHoliday</a></li></ul></nav>
