--- a/portfoilo/PortfolioContest.html
+++ b/portfoilo/PortfolioContest.html
@@ -28,7 +28,7 @@
     <p>해커톤 대회</p>
     <p>사물인터넷 등 신기술을 이용한 도시문제 방안 구상</p>
     <p>자신의 직접 생활에 필요한 물건을 제작하는 대회</p>
-    <img src="/PORTFOLIO/해커톤.PNG"/></section>
+    <img src="https://leedongjin0903.github.io/portfolio/%ED%95%B4%EC%BB%A4%ED%86%A4.png"/></section>
   <aside class="col-3 banner">
   <ul><li><img src="/PORTFOLIO/하트.jpg">교수님 존경합니다♥</li></ul></aside>
 </div><div class="row"></div>
