--- a/portfoilo/PortfolioContest.html
+++ b/portfoilo/PortfolioContest.html
@@ -26,13 +26,13 @@
   <section class="col-6">
     <h3>Contest</h3>
     <p>해커톤 대회</p>
-    <p>사물인터넷 등 신기술을 이용한 도시문제 방안 구상</p>
-    <p>자신의 직접 생활에 필요한 물건을 제작하는 대회</p>
+    <p>해커톤이란 '해킹(Hacking)'과 '마라톤(Marathon)'의 합성어로</p>
+    <p> 마라톤처럼 42.195시간 동안 쉬지 않고 아이디어를 기획하고 프로그래밍 과정을 거쳐 SW서비스를 만들어 내는 대회</p>
     <img src="https://leedongjin0903.github.io/portfolio/%ED%95%B4%EC%BB%A4%ED%86%A4.png"/></section>
   <aside class="col-3 banner">
   <ul><li><img src="/PORTFOLIO/하트.jpg">교수님 존경합니다♥</li></ul></aside>
 </div><div class="row"></div>
-<footer class="footer"><h4>Made by ParkHyeJeong 2019.05.30</h4></footer></body></html>
+<footer class="footer"><h4>Made by LeeDongjin 2023.05.30</h4></footer></body></html>
 Footer
 © 2023 GitHub, Inc.
 Footer navigation
